2021-10-07 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,
	  src/f8/main.c,
	  device/include/sdcc-lib.h,
	  device/include/stdarg.h:
	  Codegen for experimental f8 port.

2021-10-06 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c,
	  src/f8/main.c,
	  src/f8/ralloc2.cc:
	  Codegen infrastructure for experimental f8 port.

2021-10-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8,
	  configure,
	  configure.ac,
	  src/SDCCmain.c,
	  src/clean.mk,
	  src/port.h:
	  Infrastructure for experimental f8 port.

2021-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.

2021-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s,
	  src/z80/main.c,
	  device/lib/z80/Makefile.in:
	  int x int -> long multiplication support routine for z80.

2021-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/gen.c,
	  doc/sdccman.lyx,
	  device/lib/z80,
	  device/lib/z180,
	  device/lib/z80n,
	  device/lib/_memset.c,
	  support/regression/ports/*/spec.mk,
	  support/regression/tests/z80n-push-nn.c,
	  .version:
	  __sdcccall(1) convention as default for z80, z80n and z180 picked from breaktheworld branch.

2021-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c:
	  Optimize out some redundant temporaries early.
	* src/stm8/peep.c,
	  src/stm8/peeph.def,
	  src/stm8/gen.c:
	  Fix handling of v flag.
	* device/lib/_fs2ulong.c,
	  device/lib/_fsmul.c,
	  device/lib/stm8/__mulsint2slong.s:
	  Minor improvements in float support.

2021-09-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3282.c:
	  Test for bug #3282.
	* src/z80/gen.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3283.c: