@@ -1,0 +1,68 @@
+;--------------------------------------------------------------------------
+;  setjmp.s
+;
+;  Copyright (C) 2014-2021, Philipp Klaus Krause
+;
+;  This library is free software; you can redistribute it and/or modify it
+;  under the terms of the GNU General Public License as published by the
+;  Free Software Foundation; either version 2, or (at your option) any
+;  later version.
+;
+;  This library is distributed in the hope that it will be useful,
+;  but WITHOUT ANY WARRANTY; without even the implied warranty of
+;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+;  GNU General Public License for more details.
+;
+;  You should have received a copy of the GNU General Public License 
+;  along with this library; see the file COPYING. If not, write to the
+;  Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
+;   MA 02110-1301, USA.
+;
+;  As a special exception, if you link this library with other files,
+;  some of which are compiled with SDCC, to produce an executable,
+;  this library does not by itself cause the resulting executable to
+;  be covered by the GNU General Public License. This exception does
+;  not however invalidate any other reasons why the executable file
+;   might be covered by the GNU General Public License.
+;--------------------------------------------------------------------------
+
+	.area   CODE
+
+	.globl ___setjmp
+
+___setjmp:
+	; store stack pointer
+	ldw	y, sp
+	ldw	(2, x), y
+
+	; store return address
+	popw	y
+	ldw	(x), y
+
+	; return 0
+	clrw	x
+
+	jp	(y)
+
+	.globl _longjmp
+
+_longjmp:
+	ldw	y, (3, sp)
+
+	; Restore stack pointer
+	pushw	x
+	ldw	x, (2, x)
+	ldw	(1, x), y
+	popw	y
+	ldw	sp, x
+
+	; Calculate return value
+	popw	x
+	tnzw	x
+	jrne	jump
+	incw	x
+jump:
+	; Return
+	ldw	y, (y)
+	jp	(y)
+
